# LiteCut

./: ANDROID_WEBVIEW_GUIDE.md  README.md  capacitor.config.ts  codemagic.yaml  index.html  metadata.json  package-lock.json  package.json  test-ffmpeg.ts  vite.config.ts
android/: capacitor.settings.gradle  gradlew  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: capacitor.config.json
android/app/src/main/assets/public/: index.html  manifest.webmanifest  sw.js
android/app/src/main/assets/public/assets/: index-1Q4umGzX.js  index-B6gNqZ_V.js  index-DDGYBfXj.css  index-DK79jrXL.js  virtual_pwa-register-B1bXVkeM.js  virtual_pwa-register-DvtiuJII.js  virtual_pwa-register-zxHs4-DQ.js
android/app/src/main/cpp/: CMakeLists.txt  FrameInterpolator.cpp
android/app/src/main/java/com/litecut/app/: MainActivity.java
android/app/src/main/java/com/litecut/app/slowmo/: SmoothSlowMoPlugin.kt
android/app/src/main/res/values/: styles.xml
src/: App.tsx  SpeedCurveEditor.tsx  index.css  main.tsx
src/lib/: opticalFlow.ts
